--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,5 @@
 cmake_minimum_required(VERSION 3.7.0)
-project(test_croncpp)
-
-include_directories(${CMAKE_SOURCE_DIR}/include)
-include_directories(${CMAKE_SOURCE_DIR}/catch)
-
-file(GLOB headers ${CMAKE_SOURCE_DIR}/include/*.h)
-file(GLOB SOURCES "test/*.cpp" "include/*.cpp")
+project(croncpp)
 
 if(WIN32)
 	message(status "Setting MSVC flags")
@@ -20,6 +14,7 @@ else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -fexceptions -g -Wall")
 endif()
 
-add_executable(test_croncpp ${SOURCES} ${headers})
-
 message(status "** CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")
+
+add_subdirectory(benchmark)
+add_subdirectory(test)
