added appveyor and lgtm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,5 +16,7 @@ endif()
 
 message(status "** CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")
 
+include(CTest)
+
 add_subdirectory(benchmark)
 add_subdirectory(test)
