correct build path

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ compiler: gcc
 before_script:
   - mkdir build
   - cd build
-  - cmake -H. -BBuild -DCMAKE_BUILD_TYPE=Release -Wdev
+  - cmake .. -H. -BBuild -DCMAKE_BUILD_TYPE=Release -Wdev
   
 script:
   - make -j 2
