--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: cpp
 compiler: gcc
 
 before_script:
-  - mkdir build
+  - cd ${TRAVIS_BUILD_DIR}
+  - cmake -H. -BBuild -DCMAKE_BUILD_TYPE=Release -Wdev
   - cd build
-  - cmake .. -H. -BBuild -DCMAKE_BUILD_TYPE=Release -Wdev
   
 script:
   - make -j 2
