--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,9 @@ endif()
 
 message(status "** CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")
 
-include(CTest)
+if(BUILD_TESTS)
+    include(CTest)
+endif()
 
 add_subdirectory(benchmark)
 add_subdirectory(test)
