--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: cpp
 compiler: gcc
 dist: trusty
-
+  
 before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
+  - pip install --user cpp-coveralls
 
 install: 
   - sudo apt-get install -qq g++-8
@@ -13,11 +14,14 @@ install:
   
 before_script:
   - cd ${TRAVIS_BUILD_DIR}
-  - cmake -H. -BBuild -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=ON -Wdev
+  - cmake -H. -BBuild -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=ON -DENABLE_PROFILING=ON -Wdev
   - cd Build
   
 script:
+  - ../configure --enable-gcov && make && make check
   - make -j 2
   - ctest -V -j 2 -C Release
   - cppcheck --quiet --error-exitcode=1 . 
-  
+
+after_success:
+  - coveralls --exclude lib --exclude test --gcov-options '\-lp'
